# arrow-cpp-examples

./: README.md
arrow_compute_filter/: README.md  example.cc
arrow_parquet_static/: CMakeLists.txt  README.md  example.cc
arrow_table_partition/: CMakeLists.txt  README.md  example.cc  example_batch_partitioning.cc  starwars.parquet
dictionary_array/: README.md  example.cc
example_base/: README.md  example.cc
ipc_mmap_acero_filter/: CMakeLists.txt  README.md  example.cc
parquet_write_threaded/: CMakeLists.txt  README.md  parquet_write_threaded.cc
table_from_buffer/: CMakeLists.txt  README.md  example.cc
